# chat-app-api

./: Cargo.toml  test.http
src/: chat.html  main.rs
src/html/: chat.html
src/html/static/: index.html
