[package]
name = "chat-app-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.0", features = ["full"] }
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
# sqlx = { version = "0.7", features = [
#     "runtime-tokio",
#     "tls-native-tls",
#     "sqlite",
# ] }
# libsql-client = { git = "https://github.com/libsql/libsql-client-rs", branch = "main" }
url = "2.5.0"
urlencoding = "2.1.3"
